<resources>
    <string name="app_name">Ministop_final</string>

    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_history">History</string>


    <string name="cate_food">Food &amp; Drink</string>
    <string name="cate_misc">Miscellaneous products</string>
    <string name="all_products">All Products</string>
    <string name="expand"><u>Expand</u></string>

    <string name="login_text">Sign in</string>
    <string name="register_text">Register</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="passwd_text">Password</string>
    <string name="ask_for_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="click_here_to_register"><u>Sign up</u></string>
    <string name="click_here_to_signin"><u>Sign in</u></string>
    <string name="do_it">Buy it now at </string>
    <string name="where_you_ask">EVERY OF OUR STORE!</string>

    <!-- Button text -->
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>

    <!-- Lorem ipsum -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada leo ac suscipit varius. Mauris tempus mauris at gravida imperdiet. Suspendisse blandit congue nulla, sit amet facilisis felis faucibus vestibulum. Fusce sollicitudin mauris ligula, non feugiat nisi egestas ut. Duis et odio ac metus accumsan aliquet ac ut nibh.</string>
    <string name="confirmation">You have successfully<br />completed  your payment procedure</string>
</resources>