<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/nav_profile"/>

    <item android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/nav_search"/>

    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home"/>

    <item android:id="@+id/nav_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/nav_cart"/>

    <item android:id="@+id/nav_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/nav_history"/>

</menu>