<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABC0DC"
    tools:context=".Register">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_signup"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="64dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/transparent"
        android:onClick="BackButtonPressed"
        android:text="←"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="393dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rectangle1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingTop="35dp"
            android:text="@string/register_text"
            android:textColor="@color/blue900"
            android:textSize="25dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName_reg"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name_text"
            android:paddingStart="45dp">

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail_reg"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            android:paddingStart="45dp">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword_reg"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwd_text"
            android:paddingStart="45dp">

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="63dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="270dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_blue"
                android:text="@string/register_text"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="63dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/already_have_account"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/registerButton"
                app:layout_constraintTop_toBottomOf="@+id/registerButton" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:onClick="goToSignin"
                android:paddingLeft="5dp"
                android:text="@string/click_here_to_signin"
                android:textAllCaps="true"
                android:textColor="@color/blue900"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/registerButton"
                app:layout_constraintTop_toBottomOf="@+id/registerButton" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>