<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABC0DC"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="64dp"
            android:layout_height="46dp"
            android:layout_marginTop="44dp"
            android:background="@android:color/transparent"
            android:onClick="BackButtonPressed"
            android:text="←"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="387dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rectangle1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:outlineSpotShadowColor="@color/black"
            android:paddingStart="50dp"
            android:paddingTop="35dp"
            android:text="@string/login_text"
            android:textColor="@color/blue900"
            android:textSize="25dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email_text"
            android:paddingStart="45dp"
            android:textColorHint="@color/blue_ministop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwd_text"
            android:paddingStart="45dp"
            android:textColorHint="@color/blue_ministop">

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="63dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="270dp"
                android:layout_height="49dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_background_yellow"
                android:text="@string/login_text"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="63dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/ask_for_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:onClick="goToRegister"
                android:paddingLeft="5dp"
                android:text="@string/click_here_to_register"
                android:textAllCaps="true"
                android:textColor="@color/blue900"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>