<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icecream" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="18dp"
                    android:paddingStart="110dp"
                    android:text="@string/cate_food"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/food_category_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="114dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/com_bg09" />

                <TextView
                    android:gravity="center"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cate_misc"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/misc_category_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="114dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/com_bg10" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="165dp"
                    android:gravity="center"
                    android:layout_toStartOf="@+id/seeall3"
                    android:text="@string/all_products"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/seeall3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:textColor="@color/white"
                    android:text="@string/expand" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_products_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="230dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>