<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_home"
    tools:context=".Detail">

    <ImageView
        android:id="@+id/product_detail_image"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/product_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Price"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/product_detail_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_name" />

    <TextView
        android:id="@+id/product_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="ProductName"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_image" />

    <View
        android:id="@+id/divider2"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_type" />

    <TextView
        android:id="@+id/product_detail_description"
        android:layout_width="336dp"
        android:layout_height="133dp"
        android:layout_marginTop="4dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background_blue"
        android:gravity="center"
        android:text="Category:"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toStartOf="@+id/product_detail_type"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/product_detail_type"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="116dp"
        android:background="@drawable/button_background_yellow"
        android:gravity="center"
        android:text="sample_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Description:"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_price" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/do_it"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/where_you_ask"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_description"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider3"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_description" />

    <View
        android:id="@+id/divider4"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_cartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_yellow"
            android:text="@string/add_to_cart"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buy_nowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_blue"
            android:text="@string/buy_now"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>